--- a/debian/openbve.6
+++ b/debian/openbve.6
@@ -16,7 +16,7 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH "NAME"
-OpenBVE \- train/railway simulator and game
+openBVE \- train/railway simulator and game
 .SH "SYNOPSIS"
 \fBopenbve\fR [\fB/route=\fIroute.csv\fR] [\fB/train=\fIdirectory\fR] [\fB/controls\fR|\fB/newgame\fR|\fB/options\fR|\fB/review\fR]
 
@@ -117,6 +117,6 @@ This manual page was written for Debian/Ubuntu by Paul Sladen <ubuntu@paul.slade
 .br
 .SH "SEE ALSO"
 Website:
-.BR http://trainsimframework.org/
+.BR https://openbve-project.net/
 .br
 
