--- a/assets/Languages/ja-JP.xlf
+++ b/assets/Languages/ja-JP.xlf
@@ -11,6 +11,14 @@
 					<source>US.png</source>
 					<target>JP.png</target>
 				</trans-unit>
+				<trans-unit id="contributors">
+					<source>Unknown</source>
+					<target>F81_tec200, Midnight Express Ginga81(ginga81), S520, Stop_Pattern, rekuto02(Aosa), series223w10</target>
+				</trans-unit>
+				<trans-unit id="last_updated">
+					<source>2019-06-29</source>
+					<target>2019-06-29</target>
+				</trans-unit>
 			</group>
 			<group id="openbve">
 				<group id="program">
@@ -3825,351 +3833,351 @@
 			<group id="motor_sound_editor">
 				<group id="menu_file">
 					<trans-unit id="file">
-						<source>file</source>
+						<source>File</source>
 						<target>ファイル</target>
 					</trans-unit>
 					<trans-unit id="new">
-						<source>new</source>
+						<source>New</source>
 						<target>新規作成</target>
 					</trans-unit>
 					<trans-unit id="open">
-						<source>open</source>
-						<target>開く</target>
+						<source>Open...</source>
+						<target>開く...</target>
 					</trans-unit>
 					<trans-unit id="save">
-						<source>save</source>
+						<source>Save</source>
 						<target>保存</target>
 					</trans-unit>
 					<trans-unit id="save_as">
-						<source>save_as</source>
-						<target>名前を付けて保存</target>
+						<source>Save as...</source>
+						<target>名前を付けて保存...</target>
 					</trans-unit>
 					<trans-unit id="exit">
-						<source>exit</source>
+						<source>Exit</source>
 						<target>終了</target>
 					</trans-unit>
 				</group>
 				<group id="menu_edit">
 					<trans-unit id="edit">
-						<source>edit</source>
+						<source>Edit</source>
 						<target>編集</target>
 					</trans-unit>
 					<trans-unit id="undo">
-						<source>undo</source>
+						<source>Undo</source>
 						<target>元に戻す</target>
 					</trans-unit>
 					<trans-unit id="redo">
-						<source>redo</source>
+						<source>Redo</source>
 						<target>やり直す</target>
 					</trans-unit>
 					<trans-unit id="cut">
-						<source>cut</source>
+						<source>Cut</source>
 						<target>切り取り</target>
 					</trans-unit>
 					<trans-unit id="copy">
-						<source>copy</source>
+						<source>Copy</source>
 						<target>コピー</target>
 					</trans-unit>
 					<trans-unit id="paste">
-						<source>paste</source>
+						<source>Paste</source>
 						<target>貼り付け</target>
 					</trans-unit>
 					<trans-unit id="cleanup">
-						<source>cleanup</source>
+						<source>Cleanup</source>
 						<target>クリーンアップ</target>
 					</trans-unit>
 					<trans-unit id="delete">
-						<source>delete</source>
+						<source>Delete</source>
 						<target>削除</target>
 					</trans-unit>
 				</group>
 				<group id="menu_view">
 					<trans-unit id="view">
-						<source>view</source>
+						<source>View</source>
 						<target>表示</target>
 					</trans-unit>
 					<trans-unit id="power">
-						<source>power</source>
+						<source>Power</source>
 						<target>力行</target>
 					</trans-unit>
 					<trans-unit id="brake">
-						<source>brake</source>
+						<source>Brake</source>
 						<target>ブレーキ</target>
 					</trans-unit>
 					<trans-unit id="track">
-						<source>track</source>
+						<source>Track</source>
 						<target>トラック</target>
 					</trans-unit>
 				</group>
 				<group id="menu_input">
 					<trans-unit id="input">
-						<source>input</source>
+						<source>Input</source>
 						<target>入力</target>
 					</trans-unit>
 					<trans-unit id="pitch">
-						<source>pitch</source>
+						<source>Pitch</source>
 						<target>音程</target>
 					</trans-unit>
 					<trans-unit id="volume">
-						<source>volume</source>
+						<source>Volume</source>
 						<target>音量</target>
 					</trans-unit>
 					<trans-unit id="sound_index">
-						<source>sound_index</source>
+						<source>Sound source index</source>
 						<target>音源インデックス</target>
 					</trans-unit>
 					<trans-unit id="sound_index_none">
-						<source>sound_index_none</source>
+						<source>None</source>
 						<target>無し</target>
 					</trans-unit>
 				</group>
 				<group id="menu_tool">
 					<trans-unit id="tool">
-						<source>tool</source>
+						<source>Tool</source>
 						<target>ツール</target>
 					</trans-unit>
 					<trans-unit id="select">
-						<source>select</source>
+						<source>Select</source>
 						<target>選択</target>
 					</trans-unit>
 					<trans-unit id="move">
-						<source>move</source>
+						<source>Move</source>
 						<target>移動</target>
 					</trans-unit>
 					<trans-unit id="dot">
-						<source>dot</source>
+						<source>Dot</source>
 						<target>点描</target>
 					</trans-unit>
 					<trans-unit id="line">
-						<source>line</source>
+						<source>Line</source>
 						<target>直線</target>
 					</trans-unit>
 				</group>
 				<group id="view_setting">
 					<trans-unit id="view_setting">
-						<source>view_setting</source>
+						<source>View setting</source>
 						<target>表示設定</target>
 					</trans-unit>
 					<trans-unit id="min_velocity">
-						<source>min_velocity</source>
+						<source>x-min(Velocity):</source>
 						<target>x軸の最小値(速度):</target>
 					</trans-unit>
 					<trans-unit id="max_velocity">
-						<source>max_velocity</source>
+						<source>x-max(Velocity):</source>
 						<target>x軸の最大値(速度):</target>
 					</trans-unit>
 					<trans-unit id="min_pitch">
-						<source>min_pitch</source>
+						<source>y-min(Pitch):</source>
 						<target>y軸の最小値(音程):</target>
 					</trans-unit>
 					<trans-unit id="max_pitch">
-						<source>max_pitch</source>
+						<source>y-max(Pitch):</source>
 						<target>y軸の最大値(音程):</target>
 					</trans-unit>
 					<trans-unit id="min_volume">
-						<source>min_volume</source>
+						<source>y-min(Volume):</source>
 						<target>y軸の最小値(音量):</target>
 					</trans-unit>
 					<trans-unit id="max_volume">
-						<source>max_volume</source>
+						<source>y-max(Volume):</source>
 						<target>y軸の最大値(音量):</target>
 					</trans-unit>
 					<trans-unit id="zoom_in">
-						<source>zoom_in</source>
+						<source>Zoom In</source>
 						<target>拡大</target>
 					</trans-unit>
 					<trans-unit id="zoom_out">
-						<source>zoom_out</source>
+						<source>Zoom Out</source>
 						<target>縮小</target>
 					</trans-unit>
 					<trans-unit id="reset">
-						<source>reset</source>
+						<source>Reset</source>
 						<target>リセット</target>
 					</trans-unit>
 				</group>
 				<group id="direct_input">
 					<trans-unit id="direct_input">
-						<source>direct_input</source>
+						<source>Direct input</source>
 						<target>直接入力</target>
 					</trans-unit>
 					<trans-unit id="x_coordinate">
-						<source>x_coordinate</source>
+						<source>x coordinate:</source>
 						<target>x座標:</target>
 					</trans-unit>
 					<trans-unit id="y_coordinate">
-						<source>y_coordinate</source>
+						<source>y coordinate:</source>
 						<target>y座標:</target>
 					</trans-unit>
 					<trans-unit id="dot">
-						<source>dot</source>
+						<source>Dot</source>
 						<target>点描</target>
 					</trans-unit>
 					<trans-unit id="move">
-						<source>move</source>
+						<source>Move</source>
 						<target>移動</target>
 					</trans-unit>
 				</group>
 				<group id="play_setting">
 					<trans-unit id="play_setting">
-						<source>play_setting</source>
+						<source>Playback setting</source>
 						<target>再生設定</target>
 					</trans-unit>
 					<trans-unit id="source">
-						<source>source</source>
+						<source>Sound source setting</source>
 						<target>音源設定</target>
 					</trans-unit>
 					<trans-unit id="source_run">
-						<source>source_run</source>
-						<target>走行音</target>
+						<source>Running sound:</source>
+						<target>走行音:</target>
 					</trans-unit>
 					<trans-unit id="source_track">
-						<source>source_track</source>
+						<source>Track</source>
 						<target>トラック</target>
 					</trans-unit>
 					<trans-unit id="area">
-						<source>area</source>
+						<source>Area setting</source>
 						<target>区間設定</target>
 					</trans-unit>
 					<trans-unit id="area_loop">
-						<source>area_loop</source>
+						<source>Loop playback</source>
 						<target>ループ再生</target>
 					</trans-unit>
 					<trans-unit id="area_constant">
-						<source>area_constant</source>
+						<source>Constant speed</source>
 						<target>等速運動</target>
 					</trans-unit>
 					<trans-unit id="area_acceleration">
-						<source>area_acceleration</source>
-						<target>加速度</target>
+						<source>Acceleration:</source>
+						<target>加速度:</target>
 					</trans-unit>
 					<trans-unit id="area_swap">
-						<source>area_swap</source>
+						<source>Swap</source>
 						<target>入れ替え</target>
 					</trans-unit>
 					<trans-unit id="play">
-						<source>play</source>
+						<source>Playback</source>
 						<target>再生</target>
 					</trans-unit>
 					<trans-unit id="pause">
-						<source>pause</source>
+						<source>Pause</source>
 						<target>一時停止</target>
 					</trans-unit>
 					<trans-unit id="stop">
-						<source>stop</source>
+						<source>Stop</source>
 						<target>停止</target>
 					</trans-unit>
 				</group>
 				<group id="status_type">
 					<trans-unit id="status_type">
-						<source>status_type</source>
+						<source>Type:</source>
 						<target>タイプ:</target>
 					</trans-unit>
 					<trans-unit id="power">
-						<source>power</source>
+						<source>Power</source>
 						<target>力行</target>
 					</trans-unit>
 					<trans-unit id="brake">
-						<source>brake</source>
+						<source>Brake</source>
 						<target>ブレーキ</target>
 					</trans-unit>
 				</group>
 				<group id="status_track">
 					<trans-unit id="status_track">
-						<source>status_track</source>
+						<source>Track:</source>
 						<target>トラック:</target>
 					</trans-unit>
 				</group>
 				<group id="status_mode">
 					<trans-unit id="status_mode">
-						<source>status_mode</source>
+						<source>Mode:</source>
 						<target>モード:</target>
 					</trans-unit>
 					<trans-unit id="pitch">
-						<source>pitch</source>
+						<source>Pitch</source>
 						<target>音程</target>
 					</trans-unit>
 					<trans-unit id="volume">
-						<source>volume</source>
+						<source>Volume</source>
 						<target>音量</target>
 					</trans-unit>
 					<trans-unit id="sound_index">
-						<source>sound_index</source>
+						<source>Sound source index</source>
 						<target>音源インデックス</target>
 					</trans-unit>
 				</group>
 				<group id="status_tool">
 					<trans-unit id="status_tool">
-						<source>status_tool</source>
+						<source>Tool:</source>
 						<target>ツール:</target>
 					</trans-unit>
 					<trans-unit id="select">
-						<source>select</source>
+						<source>Select</source>
 						<target>選択</target>
 					</trans-unit>
 					<trans-unit id="move">
-						<source>move</source>
+						<source>Move</source>
 						<target>移動</target>
 					</trans-unit>
 					<trans-unit id="dot">
-						<source>dot</source>
+						<source>Dot</source>
 						<target>点描</target>
 					</trans-unit>
 					<trans-unit id="line">
-						<source>line</source>
+						<source>Line</source>
 						<target>直線</target>
 					</trans-unit>
 				</group>
 				<group id="status_xy">
 					<trans-unit id="velocity">
-						<source>velocity</source>
+						<source>Velocity:</source>
 						<target>速度:</target>
 					</trans-unit>
 					<trans-unit id="pitch">
-						<source>pitch</source>
+						<source>Pitch:</source>
 						<target>音程:</target>
 					</trans-unit>
 					<trans-unit id="volume">
-						<source>volume</source>
+						<source>Volume:</source>
 						<target>音量:</target>
 					</trans-unit>
 				</group>
 				<group id="vertex_info">
 					<trans-unit id="vertex_info">
-						<source>vertex_info</source>
+						<source>Vertex information</source>
 						<target>頂点情報</target>
 					</trans-unit>
 					<trans-unit id="velocity">
-						<source>velocity</source>
+						<source>Velocity:</source>
 						<target>速度:</target>
 					</trans-unit>
 					<trans-unit id="pitch">
-						<source>pitch</source>
+						<source>Pitch:</source>
 						<target>音程:</target>
 					</trans-unit>
 					<trans-unit id="volume">
-						<source>volume</source>
+						<source>Volume:</source>
 						<target>音量:</target>
 					</trans-unit>
 					<trans-unit id="sound_index">
-						<source>Sound Index:</source>
+						<source>Sound source index:</source>
 						<target>音源インデックス:</target>
 					</trans-unit>
 				</group>
 				<group id="message">
 					<trans-unit id="new">
-						<source>new</source>
+						<source>Do you want to save the current file before creating a new one?</source>
 						<target>新しい車両データを作成する前に現在のデータを保存しますか?</target>
 					</trans-unit>
 					<trans-unit id="open">
-						<source>open</source>
+						<source>Do you want to save the current file before opening another file?</source>
 						<target>別の車両データを開く前に現在のデータを保存しますか?</target>
 					</trans-unit>
 					<trans-unit id="exit">
-						<source>exit</source>
+						<source>Do you want to save the current file before closing?</source>
 						<target>閉じる前に現在のデータを保存しますか?</target>
 					</trans-unit>
 					<trans-unit id="vertex_exist">
-						<source>vertex_exist</source>
+						<source>A point already exists at the same x coordinate, do you want to overwrite it?</source>
 						<target>既に同じx座標に点が存在しますが、上書きしますか?</target>
 					</trans-unit>
 				</group>
