Language files update

--- a/assets/Languages/pt-PT.xlf
+++ b/assets/Languages/pt-PT.xlf
@@ -1445,6 +1445,9 @@
 						<source>Load in advance</source>
 						<target>Carregar antecipadamente</target>
 					</trans-unit>
+					<trans-unit id="advanced_is_use_new_renderer">
+						<source>Enable the new renderer</source>
+					</trans-unit>
 					<trans-unit id="advanced_disable_displaylists">
 						<source>Disable OpenGL display lists</source>
 						<target>Desactivar listas de exibição do OpenGL</target>
