--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -537,6 +537,9 @@
 					<trans-unit id="creation_proceed">
 						<source>Proceed......</source>
 					</trans-unit>
+					<trans-unit id="creation_invalid_nofiles">
+						<source>No files were selected to package- Please retry.</source>
+					</trans-unit>
 					<trans-unit id="creation_invalid_filename">
 						<source>The selected filename is invalid- Please retry.</source>
 					</trans-unit>
