--- a/assets/Languages/ja-JP.xlf
+++ b/assets/Languages/ja-JP.xlf
@@ -709,6 +709,10 @@
 						<source>Proceed......</source>
 						<target>続行......</target>
 					</trans-unit>
+					<trans-unit id="creation_invalid_nofiles">
+						<source>No files were selected to package- Please retry.</source>
+						<target>No files were selected to package- Please retry.</target>
+					</trans-unit>
 					<trans-unit id="creation_invalid_filename">
 						<source>The selected filename is invalid- Please retry.</source>
 						<target>選択したファイル名は無効です。再入力してください。</target>
