Fix: Newline bug in default train not found string

--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -234,7 +234,7 @@
 						<source>Preview:</source>
 					</trans-unit>
 					<trans-unit id="train_notfound">
-						<source>The default train could not be found:\n\n</source>
+						<source>The default train could not be found:\r\n\r\n</source>
 					</trans-unit>
 					<trans-unit id="train_pluginnotsupported">
 						<source>--- This train uses a safety system plugin which cannot be used on your operating system. The built-in safety systems ATS/ATC will be used instead, which might cause operational problems. ---</source>
