--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -1212,6 +1212,15 @@
 					<trans-unit id="input_device_plugin_config">
 						<source>Config</source>
 					</trans-unit>
+					<trans-unit id="panel2_extended">
+						<source>Enable Panel2 Extended Mode</source>
+					</trans-unit>
+					<trans-unit id="xobject_parser">
+						<source>X Object Parser</source>
+					</trans-unit>
+					<trans-unit id="objobject_parser">
+						<source>OBJ Object Parser</source>
+					</trans-unit>
 				</group>
 				<group id="dialog">
 					<trans-unit id="csvfiles">
