Add translation for signal set change label

--- a/assets/Languages/id-ID.xlf
+++ b/assets/Languages/id-ID.xlf
@@ -1599,6 +1599,9 @@
 						<source>Config</source>
 						<target>Aturan input</target>
 					</trans-unit>
+					<trans-unit id="compatibility_signals">
+						<source>Default Signals:</source>
+					</trans-unit>
 				</group>
 				<group id="dialog">
 					<trans-unit id="csvfiles">
