--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -1212,6 +1212,9 @@
 					<trans-unit id="input_device_plugin_config">
 						<source>Config</source>
 					</trans-unit>
+					<trans-unit id="compatibility_signals">
+						<source>Default Signals:</source>
+					</trans-unit>
 				</group>
 				<group id="dialog">
 					<trans-unit id="csvfiles">
