--- a/assets/Languages/ja-JP.xlf
+++ b/assets/Languages/ja-JP.xlf
@@ -1610,6 +1610,9 @@
 						<source>Config</source>
 						<target>設定</target>
 					</trans-unit>
+					<trans-unit id="compatibility_signals">
+						<source>Default Signals:</source>
+					</trans-unit>
 				</group>
 				<group id="dialog">
 					<trans-unit id="csvfiles">
