--- a/assets/Languages/pt-PT.xlf
+++ b/assets/Languages/pt-PT.xlf
@@ -1612,6 +1612,9 @@
 						<source>Config</source>
 						<target>Configurar</target>
 					</trans-unit>
+					<trans-unit id="compatibility_signals">
+						<source>Default Signals:</source>
+					</trans-unit>
 				</group>
 				<group id="dialog">
 					<trans-unit id="csvfiles">
